--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>DJS05</title>
-        <script src="scripts.js" defer></script>
+        <title>DJS06 HOF</title>
+        <script src="scripts.js" type="module" defer></script>
     </head>
     <body></body>
 </html>
